styles/posts.css
/* * {
    outline: red 1px solid;
} */

/* :root {
  font-size: 16px;
  font-family: Raleway;
} */

.post-flex-container {
  position: relative;
  top: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.post {
  width: calc(-2rem + 100%);
  max-width: 26rem;
  backdrop-filter: blur(var(--backdrop-blur));
  -webkit-backdrop-filter: blur(var(--backdrop-blur));
  display: flex;
  flex-direction: column;
  border-radius: 1rem;
  margin: 0rem 1rem 0rem 1rem;
  overflow: hidden;
  margin-bottom: 1rem;
  margin-top: 1rem;
  box-shadow: var(--box-shadow);
  background: rgb(255 255 255 / 0.382);
}

.post:not(:first-of-type) {
  margin-top: 1rem;
}

/* Date section */
.date-section {
  padding: 1rem;
  display: flex;
  justify-content: space-between;
}

.date-section .left {
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  /* margin-left: 0.5rem;
  height: 2rem; */
  position: relative;
}
.date-section .right {
  display: flex;
  flex-direction: row;
  height: 100%;
  margin-right: 0.75rem;
  position: relative;
}

.date-section .left img {
  height: 1.2rem;
  width: 1.2rem;
  border-radius: 50%;
  margin-right: 0.5rem;
  /* width: ; */
}

.date-section .right * {
  display: flex;
  align-items: center;
  justify-content: center;
}
.date-section .left .name {
  display: flex;
  align-items: center;
  justify-content: center;
}

.date-section .left .name {
  height: 100%;
  margin: 0;
  margin-right: 1rem;
  /* width: ; */
}
.date-section .right .date {
  height: 100%;
  margin: 0;
  font-weight: bold;
  /* width: ; */
}

/* image section */
.image-section {
  height: 18rem;
  width: 100%;
  overflow: hidden;
  position: relative;
  /* border-radius: 20px; */
  cursor: pointer;
}

.standardCursor {
  cursor: unset;
}

.image-section.imageUploadSection p {
  text-align: center;
  position: absolute;
  top: 10.5rem;
  color: #3f3f3f;
  left: 50%;
  transform: translate(-50%);
}

.image-section img {
  position: relative;
  /* border-radius: 20px; */
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.image-section img.image-upload-placeholder {
  height: 100%;
  width: 100%;
  object-fit: cover;
  top: 7.5rem;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* text section */
.text-section {
  height: 10rem;
  display: flex;
  padding: 1rem;
}

.text-section .text-section-text {
  width: 70%;
  overflow: scroll;
  padding-right: 1rem;
  overflow-x: hidden;
}

.text-section .text-section-text h2 {
  margin: 0.5rem 0rem;
  word-break: break-all;
}

.text-section .text-section-text p {
  margin: 0.5rem 0rem;
  word-break: break-all;
}

.text-section .text-section-vote {
  width: 30%;
  display: flex;
  flex-direction: column;
  position: relative;
}

.img-container {
  position: relative;
  width: 100%;
  margin: 0;
  flex-grow: 1;
  height: 40%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.text-section .text-section-vote img.upvote {
  height: 60%;
  width: auto;
  margin-bottom: -1rem;
}
.text-section .text-section-vote p {
  position: relative;
  width: 100%;
  margin: 0;
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}
.text-section .text-section-vote img.downvote {
  margin-top: -1rem;
  height: 60%;
  width: auto;
}

.upvoteInactive {
  height: 60%;
  width: auto;
}

.downvoteInactive {
  height: 60%;
  width: auto;
}

.upvote-active {
  height: 60%;
  width: auto;
}

.downvote-active {
  height: 60%;
  width: auto;
}

/* bottom section */
.button {
  -webkit-appearance: none;
  /* margin-bottom: .5rem; */
  bottom: 1rem;
  height: 2.3rem;
  border-radius: 1rem;
  appearance: none;
  border: none;
  padding: 0.3rem 1rem;
  color: white;
  font-weight: bold;
  position: relative;
  font-size: 0.85rem;
}

.bottom-section {
  display: flex;
  justify-content: space-between;
}

.post-edit-button,
.post-delete-button {
  color: white;
}

.bottom-section .left {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 0.7rem;
}

.bottom-section .right {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 1rem;
}

.bottom-section .left button {
  font-size: 1rem;
  position: relative;
  height: 2.3rem;
  border: none;
  background: none;
  font-weight: bold;
  outline: none;
  text-decoration: underline;
  bottom: 0.25rem;
}

.bottom-section .right .edit-button,
.post-edit-button {
  background: var(--color-standard-blue);
  appearance: none;
  border: none;
  margin-right: 0.5rem;
  padding: 0.3rem 1rem;
  border-radius: 1rem 0.5rem 0.5rem 1rem;
}

.bottom-section .right .delete-button,
.post-delete-button {
  background: var(--color-standard-red);
  appearance: none;
  /* padding: 0.3rem 0.6rem; */
  border: none;
  border-radius: 0.5rem 1rem 1rem 0.5rem;
}

/* Comment */
.comment {
  background: rgb(255 255 255 / 0.382);
  justify-content: space-evenly;
  max-width: 24rem;
  width: calc(100% - 6rem);
  position: relative;
  display: flex;
  flex-direction: column;
  border-radius: 1rem;
  margin: 0rem 2rem 1rem 2rem;
  flex-grow: 1;
  margin-bottom: 1rem;
  overflow: hidden;
  backdrop-filter: blur(var(--backdrop-blur));
  -webkit-backdrop-filter: blur(var(--backdrop-blur));
  box-shadow: var(--box-shadow);
  transition: 0.5s;
}

.comment * {
  transition: 0.5s;
}

.comment .upper {
  display: flex;
  justify-content: space-between;
  padding: 1rem 1rem 1.5rem 1rem;
}

.comment .upper .right {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
}

.comment .upper .right p.date {
  margin: 0;
  margin-right: 0.3rem;
  font-weight: bold;
}

.comment .upper .left {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.comment .upper .left img {
  height: 1.2rem;
  width: 1.2rem;
  border-radius: 50%;
}
.comment .upper .left .name {
  font-weight: bold;
  margin: 0;
  margin-left: 0.5rem;
}
.comment .lower {
  display: flex;
  justify-content: space-between;
  /* height: 2.5rem; */
}

p.comment-paragraph {
  margin-bottom: 1rem;
}

.comment .lower .right {
  align-items: flex-end;
  display: flex;
  justify-content: center;
  margin-right: 1rem;
}

.comment .lower .right .edit-button {
  margin-right: 0.5rem;
  background: rgb(57 149 234);
  border-radius: 1rem 0.5rem 0.5rem 1rem;
}
.comment .lower .right .delete-button {
  background: rgba(255, 0, 0, 0.781);
  border-radius: 0.5rem 1rem 1rem 0.5rem;
}

.comment .lower .left {
  width: calc(100%);
  margin-right: 2rem;
  margin-left: 1rem;
  border-radius: 1rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.comment-submit {
  background-color: var(--color-standard-blue);
  color: white;
}

input.comment-paragraph {
  width: 100%;
  border-radius: 1rem;
  padding-left: 1rem;
  border: none;
  background: #ecececad;
  height: 2.3rem;
  margin-bottom: 1rem;
}

/* Create post  */
.text-section .text-section-text .headline {
  font-size: 1.5rem;
  background: none;
  border: none;
  word-break: break-all;
  width: 100%;
}

.text-section .text-section-text .body {
  width: 100%;
  height: 6rem;
  margin-top: 1rem;
  font-size: 1rem;
  background: none;
  border: none;
  word-break: break-all;
}

.create-post-form {
  padding-bottom: 3rem;
  position: relative;
  top: 5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

form label.link-label {
  font-size: 1rem;
  font-weight: bold;
  margin-top: 1rem;
  width: 16rem;
}

form input.link-input {
}

form input.link-button {
  margin-top: 2rem;
  height: 3rem;
  width: 9rem;
  background: rgba(0, 233, 0, 0.795);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  color: white;
  border: none;
  border-radius: 50rem;
  font-size: 1rem;
  transition: 0.25s;
}

.arrowSectionMoveDown {
  transform: translate(0px, 1.2rem);
}

.arrowSectionMoveUp {
  transform: translate(-1.17rem, -0.5rem);
}

